...
        android:text="Llistat d'Events."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_events" />

    <Button
        android:id="@+id/button_n_event"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="Inserir/Modificar Event."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_events_list" />

    <Button
        android:id="@+id/button_del_event"
...
