...
        android:text="Activitats"
        app:layout_constraintEnd_toEndOf="@+id/button_perfil"
        app:layout_constraintStart_toStartOf="@+id/button_perfil"
        app:layout_constraintTop_toBottomOf="@+id/button_perfil" />

    <Button
        android:id="@+id/button_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Events"
        app:layout_constraintEnd_toEndOf="@+id/button_activitats"
        app:layout_constraintStart_toStartOf="@+id/button_activitats"
        app:layout_constraintTop_toBottomOf="@+id/button_activitats" />

    <Button
        android:id="@+id/button_perfil"
...
